--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: python
+dist: xenial
 python:
   - "2.6"
   - "2.7"
   - "3.6"
+  - "3.7"
+  - "3.8-dev"
   # - "nightly"
   #- "pypy"
   # - "pypy3"
-sudo: false
+sudo: true
 env:
   global:
     - PYTHONIOENCODING=UTF-8
